--- a/views/room.ejs
+++ b/views/room.ejs
@@ -60,7 +60,7 @@
           <div class="main__controls_block">
             <div class="main__controls_button leaveMeeting" id="leave-meeting" onclick="leaveMeeting()">
               <i class="fa fa-times"></i>
-              <span class="">Leave Meeting</span>
+              <span class="">Leave the  Meeting</span>
             </div>
           </div>
         </div>
